# modernblog

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
landing/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
landing/src/: App.tsx  index.css  routeTree.gen.ts
landing/src/components/: CopyCommand.tsx  Features.tsx  Footer.tsx  Hero.tsx  Icons.tsx  InteractiveBackground.tsx
landing/src/routes/: __root.tsx  docs.tsx  index.tsx  install.tsx
modernblog/: __init__.py
modernblog/backend/: __init__.py  app.py  config.py  database.py  dependencies.py  initialization.py  middleware.py  models.py  schemas.py  security.py  themes.py
modernblog/backend/routers/: __init__.py  comments.py  images.py  posts.py  seo.py  subscribers.py  tags.py
modernblog/backend/utils/: __init__.py  email_service.py
modernblog/cli/: __init__.py  cli.py  server.py  service.py  setup_wizard.py
modernblog/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
modernblog/frontend/public/: critical.css
modernblog/frontend/src/: config.ts  index.css  main.tsx  routeTree.gen.ts  types.ts  vite-env.d.ts
modernblog/frontend/src/api/: client.ts
modernblog/frontend/src/components/: Comments.css  Comments.tsx  ConfirmModal.tsx  Footer.css  Footer.tsx  Header.css  Header.tsx  Icons.tsx  Layout.css  MarkdownRenderer.css  MarkdownRenderer.tsx  Modal.css  PostCard.css  PostCard.tsx  PostEditor.tsx  SEO.tsx  Spinner.tsx  SubscribeModal.tsx  Toast.css  Toast.tsx
modernblog/frontend/src/context/: BlogInfoContext.tsx  ThemeContext.tsx
modernblog/frontend/src/hooks/: useEntranceAnimation.ts
modernblog/frontend/src/i18n/: i18n.ts
modernblog/frontend/src/i18n/locales/: en.json  pl.json
modernblog/frontend/src/routes/: $.css  $.tsx  __root.tsx  index.css  index.tsx
modernblog/frontend/src/routes/admin/: AdminPage.css  EditorPage.css  edit.$slug.tsx  index.tsx  new.tsx
scripts/: autorelease.py  hatch_build.py  install.sh
(+10 files in other folders)
